--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "canvas": "^3.2.0",
     "typescript": "^5.0.0",
     "vercel": "^48.8.2"
   }
