--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@stripe/react-stripe-js": "^2.3.0",
     "@stripe/stripe-js": "^2.1.0",
+    "@vercel/analytics": "^1.5.0",
     "next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
